force-app/main/default/objects/Trailblazer__c/Trailblazer__c.object-meta.xml
<CustomObject>
    <label>Trailblazer</label>
    <nameField>
        <label>Trailblazer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>