force-app/main/default/objects/Trailblazer__c/fields/AvatarUrl__c.field-meta.xml
<CustomField>
    <fullName>AvatarUrl__c</fullName>
    <label>Avatar URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>