force-app/main/default/objects/Trailblazer__c/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <label>Badges</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>