force-app/main/default/objects/Trailblazer__c/fields/BadgesData__c.field-meta.xml
<CustomField>
    <fullName>BadgesData__c</fullName>
    <label>BadgesData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>