force-app/main/default/objects/Trailblazer__c/fields/BadgesLastMonth__c.field-meta.xml
<CustomField>
    <fullName>BadgesLastMonth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Badges Last Month</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>