force-app/main/default/objects/Trailblazer__c/fields/CertificationCount__c.field-meta.xml
<CustomField>
    <fullName>CertificationCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Certification Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>