force-app/main/default/objects/Trailblazer__c/fields/IsCharketEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsCharketEmployee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charket Employee</label>
    <type>Checkbox</type>
</CustomField>