force-app/main/default/objects/Trailblazer__c/fields/NewBadges__c.field-meta.xml
<CustomField>
    <fullName>NewBadges__c</fullName>
    <formula>Badges__c -  BadgesLastMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>