force-app/main/default/objects/Trailblazer__c/fields/NewPoints__c.field-meta.xml
<CustomField>
    <fullName>NewPoints__c</fullName>
    <formula>Points__c -  PointsLastMonth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>