force-app/main/default/objects/Trailblazer__c/fields/PointsData__c.field-meta.xml
<CustomField>
    <fullName>PointsData__c</fullName>
    <label>Points Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>