force-app/main/default/objects/Trailblazer__c/fields/PointsLastMonth__c.field-meta.xml
<CustomField>
    <fullName>PointsLastMonth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>