force-app/main/default/objects/Trailblazer__c/fields/ProfileUrl__c.field-meta.xml
<CustomField>
    <fullName>ProfileUrl__c</fullName>
    <label>Profile URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>