force-app/main/default/objects/Trailblazer__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Mountaineer</fullName>
            </value>
            <value>
                <fullName>Expeditioner</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>