force-app/main/default/objects/Trailblazer__c/fields/RankLastMonth__c.field-meta.xml
<CustomField>
    <fullName>RankLastMonth__c</fullName>
    <label>Rank Last Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>