force-app/main/default/objects/Trailblazer__c/fields/TrailheadUserId__c.field-meta.xml
<CustomField>
    <fullName>TrailheadUserId__c</fullName>
    <externalId>true</externalId>
    <label>Trailhead User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>